# battleFatigues

./: .battle-fatigues.cpp.swp  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  battle-fatigues  battle-fatigues.cpp  battleFatigues  cmake_install.cmake  edgeDetector.cpp  edgeDetector.h  john  john.cpp  kMeans.cpp  kMeans.h  kmeans.h  main.cpp
